My Mom is better than yours, Journey Implementation

--- a/explore.html
+++ b/explore.html
@@ -231,6 +231,19 @@
                     </div>
                 </div>
             </div>
+            <div class="col-" style="align-content: right">
+                <div class="card  explore_card">
+                    <img src="images/products/loukoumades.jpg" class="card-img-top food" alt="Coffee">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Loukomades</h5>
+                        <p class="card-text" style="text-align: center">Honney is running!</p>
+                        <button class="btn btn-success"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                        <button class="btn btn-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+                        <button class="btn btn-primary float-right"><i class="fa fa-plus"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
