Optimizations in navbar, add sidebar

--- a/dislikes.html
+++ b/dislikes.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark dark" style="padding:6px;">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-dark dark" style="padding:6px;">
         <a class="navbar-brand" href="https://foody.com.cy/"><img src="images/logo/foody.png" alt="Foody's website"
                 style="width:128px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -30,7 +30,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="myJourneys.html">My Journeys</a>
                 </li>
@@ -44,6 +44,9 @@
                     <a class="nav-link" href="explore.html">Explore</a>
                 </li>
             </ul>
+            <div class="my-2 my-lg-0">
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Georgia</button>
+            </div>
         </div>
     </nav>
     <div class="container-fluid">
