--- a/myJourneys.html
+++ b/myJourneys.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark dark" style="padding:6px;">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-dark dark" style="padding:6px;">
         <a class="navbar-brand" href="https://foody.com.cy/"><img src="images/logo/foody.png" alt="Foody's website"
                 style="width:128px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -30,7 +30,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="myJourneys.html">My Journeys<span class="sr-only">(current)</span></a>
                 </li>
@@ -44,9 +44,17 @@
                     <a class="nav-link" href="explore.html">Explore</a>
                 </li>
             </ul>
+            <div class="my-2 my-lg-0">
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Georgia</button>
+            </div>
         </div>
     </nav>
-
+    <div class="jumbotron jumbotron-fluid" style="margin:10px;">
+        <div class="container">
+            <h1 class="display-4">Hello Georgia Kapitsaki!</h1>
+            <p class="lead">Are you hungry? Let's explore your Journeys!</p>
+        </div>
+    </div>
     <div class="container-fluid">
         <div class="row">
             <!-- Meat Journey -->
