--- a/likes.html
+++ b/likes.html
@@ -53,9 +53,10 @@
         <div class="row">
             <div class="col-" style="align-content: right">
                 <div class="card explore_card">
-                    <img src="images/products/revithia.jpg" class="card-img-top food" alt="Revithia">
+                    <img src="images/products/bonet.jpg" class="card-img-top food" alt="Bonet">
                     <div class="card-body explore_card_body">
-                        <h5 class="card-title" style="text-align: center">Revithia</h5>
+                        <h5 class="card-title" style="text-align: center">Bonet</h5>
+                        <p class="card-text" style="text-align: center">Chocolate sweet</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
@@ -63,9 +64,10 @@
             </div>
             <div class="col-" style="align-content: right">
                 <div class="card explore_card">
-                    <img src="images/products/rokfor.jpg" class="card-img-top food" alt="Roquefort">
+                    <img src="images/products/saganaki.jpg" class="card-img-top food" alt="Saganaki">
                     <div class="card-body explore_card_body">
-                        <h5 class="card-title" style="text-align: center">Roquefort</h5>
+                        <h5 class="card-title" style="text-align: center">Saganaki</h5>
+                        <p class="card-text" style="text-align: center">With honey and sesame</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
@@ -73,9 +75,10 @@
             </div>
             <div class="col-" style="align-content: right">
                 <div class="card explore_card">
-                    <img src="images/products/agkinares.jpg" class="card-img-top food" alt="Agkinares">
+                    <img src="images/products/marides.jpg" class="card-img-top food" alt="Marides">
                     <div class="card-body explore_card_body">
-                        <h5 class="card-title" style="text-align: center">Agkinares</h5>
+                        <h5 class="card-title" style="text-align: center">Fresh Marides</h5>
+                        <p class="card-text" style="text-align: center">Fried</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
@@ -83,9 +86,10 @@
             </div>
             <div class="col-" style="align-content: right">
                 <div class="card explore_card">
-                    <img src="images/products/sardeles.jpg" class="card-img-top food" alt="Sardeles">
+                    <img src="images/products/paella.jpg" class="card-img-top food" alt="Paella">
                     <div class="card-body explore_card_body">
-                        <h5 class="card-title" style="text-align: center">Sardeles</h5>
+                        <h5 class="card-title" style="text-align: center">Paella</h5>
+                        <p class="card-text" style="text-align: center">Spanish dish with sea food</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
@@ -93,9 +97,67 @@
             </div>
             <div class="col-" style="align-content: right">
                 <div class="card explore_card">
-                    <img src="images/products/kounoupidi.jpg" class="card-img-top food" alt="Kounoupidi">
+                    <img src="images/products/chocolate-strawberries.jpg" class="card-img-top food" alt="Chocolate-Strawberries">
                     <div class="card-body explore_card_body">
-                        <h5 class="card-title" style="text-align: center">Kounoupidi</h5>
+                        <h5 class="card-title" style="text-align: center">Sweet Strawberries</h5>
+                        <p class="card-text" style="text-align: center">Chocolate coveres strawberries</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/salmon.jpg" class="card-img-top food" alt="Salmon">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Salmon</h5>
+                        <p class="card-text" style="text-align: center">Baked</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/greek%20salad.jpg" class="card-img-top food" alt="Greek Salad">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Greek Salad</h5>
+                        <p class="card-text" style="text-align: center">Greek salad made</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/goat%20yoghurt.jpg" class="card-img-top food" alt="Goat Yoghurt">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Goat Yoghurt</h5>
+                        <p class="card-text" style="text-align: center">Yoghurt made by goat milk</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/jacked%20potato.jpg" class="card-img-top food" alt="Jacked Potatoes">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Jacked Potatoes</h5>
+                        <p class="card-text" style="text-align: center">With cheese filling</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/bbq-chicken.jpg" class="card-img-top food" alt="Grilled chicken thigh">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Grilled chicken thigh</h5>
+                        <p class="card-text" style="text-align: center">With bbq sauce covering</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
