--- a/likes.html
+++ b/likes.html
@@ -49,6 +49,11 @@
             </div>
         </div>
     </nav>
+    <div class="jumbotron jumbotron-fluid" style="margin:10px;">
+        <div class="container">
+            <h1 class="display-4">Food that I LOVE <3</h1> <p class="lead">I could eat these food all day!</p>
+        </div>
+    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-" style="align-content: right">
@@ -97,17 +102,16 @@
             </div>
             <div class="col-" style="align-content: right">
                 <div class="card explore_card">
-                    <img src="images/products/chocolate-strawberries.jpg" class="card-img-top food" alt="Chocolate-Strawberries">
+                    <img src="images/products/chocolate-strawberries.jpg" class="card-img-top food"
+                        alt="Chocolate-Strawberries">
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Sweet Strawberries</h5>
-                        <p class="card-text" style="text-align: center">Chocolate coveres strawberries</p>
+                        <p class="card-text" style="text-align: center">Chocolate + Fruit lover!</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
             <div class="col-" style="align-content: right">
                 <div class="card explore_card">
                     <img src="images/products/salmon.jpg" class="card-img-top food" alt="Salmon">
@@ -124,7 +128,7 @@
                     <img src="images/products/greek%20salad.jpg" class="card-img-top food" alt="Greek Salad">
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Greek Salad</h5>
-                        <p class="card-text" style="text-align: center">Greek salad made</p>
+                        <p class="card-text" style="text-align: center">Fresh Greek salad from Greece</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
@@ -135,7 +139,7 @@
                     <img src="images/products/goat%20yoghurt.jpg" class="card-img-top food" alt="Goat Yoghurt">
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Goat Yoghurt</h5>
-                        <p class="card-text" style="text-align: center">Yoghurt made by goat milk</p>
+                        <p class="card-text" style="text-align: center">Yoghurt made by Goat Milk</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
@@ -156,8 +160,8 @@
                 <div class="card explore_card">
                     <img src="images/products/bbq-chicken.jpg" class="card-img-top food" alt="Grilled chicken thigh">
                     <div class="card-body explore_card_body">
-                        <h5 class="card-title" style="text-align: center">Grilled chicken thigh</h5>
-                        <p class="card-text" style="text-align: center">With bbq sauce covering</p>
+                        <h5 class="card-title" style="text-align: center">Grilled Chicken Thigh</h5>
+                        <p class="card-text" style="text-align: center">With BBQ-sauce Covering!</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
