Add Create Journey and Add Likes buttons

--- a/myJourneys.html
+++ b/myJourneys.html
@@ -86,6 +86,10 @@
                     </div>
                 </div>
             </div>
+            <button class="btn btn-outline-secondary journey_card"><i class="fa fa-plus fa-3x"
+                    aria-hidden="true"></i><br>
+                <h5>Create Journey</h5>
+            </button>
         </div>
     </div>
     <!-- Meat Lover Modal -->
