--- a/likes.html
+++ b/likes.html
@@ -167,6 +167,10 @@
                     </div>
                 </div>
             </div>
+            <button class="btn btn-outline-secondary explore_card"><i class="fa fa-plus fa-3x"
+                    aria-hidden="true"></i><br>
+                <h5>Add Likes</h5>
+            </button>
         </div>
     </div>
 </body>
