Add functionality to Create Journey and Add Like buttons

--- a/likes.html
+++ b/likes.html
@@ -167,8 +167,9 @@
                     </div>
                 </div>
             </div>
-            <button class="btn btn-outline-secondary explore_card"><i class="fa fa-plus fa-3x"
-                    aria-hidden="true"></i><br>
+            <button class="btn btn-outline-secondary explore_card btn_align_center"
+                onclick="window.location.href='explore.html'">
+                <i class="fa fa-plus fa-3x" aria-hidden="true"></i><br>
                 <h5>Add Likes</h5>
             </button>
         </div>
