--- a/myJourneys.html
+++ b/myJourneys.html
@@ -86,8 +86,8 @@
                     </div>
                 </div>
             </div>
-            <button class="btn btn-outline-secondary journey_card"><i class="fa fa-plus fa-3x"
-                    aria-hidden="true"></i><br>
+            <button class="btn btn-outline-secondary journey_card" onclick="window.location.href='explore.html'"><i
+                    class="fa fa-plus fa-3x" aria-hidden="true"></i><br>
                 <h5>Create Journey</h5>
             </button>
         </div>
