--- a/explore.html
+++ b/explore.html
@@ -45,7 +45,7 @@
                 </li>
             </ul>
             <div class="my-2 my-lg-0">
-                <button class="btn btn-outline-outline-light my-2 my-sm-0" type="submit">Georgia</button>
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Georgia</button>
             </div>
         </div>
     </nav>
