Alteration in the dilike page

--- a/dislikes.html
+++ b/dislikes.html
@@ -51,7 +51,7 @@
     </nav>
     <div class="jumbotron jumbotron-fluid" style="margin:10px;">
         <div class="container">
-            <h1 class="display-4">Food that I hate :(</h1>
+            <h1 class="display-4">Food that I hate</h1>
             <p class="lead">My worst nightmare is to eat these food...</p>
         </div>
     </div>
@@ -62,6 +62,7 @@
                     <img src="images/products/revithia.jpg" class="card-img-top food" alt="Revithia">
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Revithia</h5>
+                        <p class="card-text" style="text-align: center">Soup with chickpeas and lemon</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
@@ -72,6 +73,7 @@
                     <img src="images/products/rokfor.jpg" class="card-img-top food" alt="Roquefort">
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Roquefort</h5>
+                        <p class="card-text" style="text-align: center">Cheese from South France</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
@@ -82,6 +84,7 @@
                     <img src="images/products/agkinares.jpg" class="card-img-top food" alt="Agkinares">
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Agkinares</h5>
+                        <p class="card-text" style="text-align: center">Fresh cardoons with carrots</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
@@ -92,6 +95,7 @@
                     <img src="images/products/sardeles.jpg" class="card-img-top food" alt="Sardeles">
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Sardeles</h5>
+                        <p class="card-text" style="text-align: center">Salted sardines</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
@@ -102,6 +106,7 @@
                     <img src="images/products/kounoupidi.jpg" class="card-img-top food" alt="Kounoupidi">
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Kounoupidi</h5>
+                        <p class="card-text" style="text-align: center">Boiled cauliflower wih salt</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
