--- a/likes.html
+++ b/likes.html
@@ -51,7 +51,7 @@
     </nav>
     <div class="jumbotron jumbotron-fluid" style="margin:10px;">
         <div class="container">
-            <h1 class="display-4">Food that I LOVE <3</h1> <p class="lead">I could eat these food all day!</p>
+            <h1 class="display-4">Food that I love</h1> <p class="lead">I could eat these food all day!</p>
         </div>
     </div>
     <div class="container-fluid">
@@ -128,7 +128,7 @@
                     <img src="images/products/greek%20salad.jpg" class="card-img-top food" alt="Greek Salad">
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Greek Salad</h5>
-                        <p class="card-text" style="text-align: center">Fresh Greek salad from Greece</p>
+                        <p class="card-text" style="text-align: center">Fresh Greek traditional salad</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
