--- a/myJourneys.html
+++ b/myJourneys.html
@@ -51,7 +51,7 @@
     </nav>
     <div class="jumbotron jumbotron-fluid" style="margin:10px;">
         <div class="container">
-            <h1 class="display-4">Hello Georgia Kapitsaki!</h1>
+            <h1 class="display-4">Hello Georgia!</h1>
             <p class="lead">Are you hungry? Let's explore your Journeys!</p>
         </div>
     </div>
