All food in likes.html

--- a/likes.html
+++ b/likes.html
@@ -167,6 +167,171 @@
                     </div>
                 </div>
             </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/burger.jpg" class="card-img-top food" alt="Burger">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Burger</h5>
+                        <p class="card-text" style="text-align: center">Juicy burgers!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/chicken.jpg" class="card-img-top food" alt="Chicken">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Chicken</h5>
+                        <p class="card-text" style="text-align: center">Fresh Chicken!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/souvlaki.jpg" class="card-img-top food" alt="Souvlaki">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Souvlaki</h5>
+                        <p class="card-text" style="text-align: center">Delicious Souvlaki!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/pizza.jpg" class="card-img-top food" alt="Pizza">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Pizza</h5>
+                        <p class="card-text" style="text-align: center">Delicious Pizza!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/tortilla.jpeg" class="card-img-top food" alt="Tortilla">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Tortilla</h5>
+                        <p class="card-text" style="text-align: center">Delicious Tortilla!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/gyros.jpg" class="card-img-top food" alt="Gyros">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Gyros</h5>
+                        <p class="card-text" style="text-align: center">Delicious Gyros!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/club.jpg" class="card-img-top food" alt="Club Sandwich">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Club Sandwich</h5>
+                        <p class="card-text" style="text-align: center">Delicious Club Sandwich!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/salad.jpg" class="card-img-top food" alt="Salad">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Burger</h5>
+                        <p class="card-text" style="text-align: center">Fresh Salad!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/noodles.jpg" class="card-img-top food" alt="Noodles">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Noodles</h5>
+                        <p class="card-text" style="text-align: center">Fresh Noodles!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/sushi.jpg" class="card-img-top food" alt="Sushi">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Sushi</h5>
+                        <p class="card-text" style="text-align: center">Delicious Sushi!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/doughnuts.jpg" class="card-img-top food" alt="Doughnuts">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Doughnuts</h5>
+                        <p class="card-text" style="text-align: center">Fresh Doughnuts!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/fruit_cake.jpg" class="card-img-top food" alt="Fruit Cake">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Fruit Cake</h5>
+                        <p class="card-text" style="text-align: center">Delicious Fruit Cake!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/coffee.jpg" class="card-img-top food" alt="Coffee">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Coffee</h5>
+                        <p class="card-text" style="text-align: center">Fresh Coffee!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/kleftiko.jpg" class="card-img-top food" alt="Kleftiko">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Kleftiko</h5>
+                        <p class="card-text" style="text-align: center">Stolen meat!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/loukoumades.jpg" class="card-img-top food" alt="Loukoumades">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Loukoumades</h5>
+                        <p class="card-text" style="text-align: center">Honney is running!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
             <button class="btn btn-outline-secondary explore_card btn_align_center"
                 onclick="window.location.href='explore.html'">
                 <i class="fa fa-plus fa-3x" aria-hidden="true"></i><br>
